linter remediation